Add annotations and reorganize NER model hierarchy